fix alignment and wrap of Funeraltems layout

--- a/efunero/src/cmp/FuneralItem.css
+++ b/efunero/src/cmp/FuneralItem.css
@@ -29,16 +29,20 @@
 .left-side {
   display: flex;
   flex-direction: column;
-  flex-grow: 7;
+  flex-basis: 70%; 
+  flex-grow: 1;
 }
 .right-side {
   display: flex;
-  flex-grow: 3;
+  flex-basis: 30%;
+  flex-grow: 1;
   /*flex: 0.3;*/
 }
 
 .price-button {
   display: flex;
-  align-items: start;
   flex-grow: 3;
+  align-items: center;
+  justify-content: center;
+  
 }
